--- a/bravo-delivery/package.json
+++ b/bravo-delivery/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bravo-react",
+  "name": "bravo-delivery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,11 +9,11 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react-dom": "^17.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.23"
   }
 }
