--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-bravo-delivery/node_modules
-bravo-delivery/.pnp
-bravo-delivery/.pnp.js
+node_modules
+.pnp
+.pnp.js
 
 # testing
-bravo-delivery/coverage
+coverage
 
 # production
-bravo-delivery/build
+build
 
 # misc
-bravo-delivery/.DS_Store
-bravo-delivery/.env.local
-bravo-delivery/.env.development.local
-bravo-delivery/.env.test.local
-bravo-delivery/.env.production.local
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-bravo-delivery/npm-debug.log*
-bravo-delivery/yarn-debug.log*
-bravo-delivery/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
